# bitex

./: .bumpversion.cfg  .gitignore  .landscape.yml  .pypirc  .pyre_configuration  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  Changelog.md  LICENSE  Makefile  Pipfile  README.md  README.rst  blah.py  pylint.rc  pyproject.toml  requirements.txt  sdf.py  setup.cfg  setup.py  test.py  tox.ini
.circleci/: config.yml  parse_bumpversion_settings.py  tag_type.sh
Nodes/: supervisor.py___jb_tmp___
api/: bitfinex.py
bitex/: __init__.py  adapter.py  auth.py  base.py  bitfinex.py  bitstamp.py  bittrex.py  ccex.py  coincheck.py  constants.py  exceptions.py  formatters.py  gemini.py  interface.py  kraken.py  okcoin.py  pairs.py  request.py  response.py  rest.py  rocktrading.py  session.py  types.py  utils.py  yunbi.py
bitex/api/: __init__.py  api.py  base.py  bitfinex.py  bitstamp.py  bittrex.py  coincheck.py  gdax.py  itbit.py  kraken.py  okcoin.py  response.py  rest.py
bitex/api/REST/: __init__.py  api.py  binance.py  bitfinex.py  bitstamp.py  bittrex.py  btce.py  bter.py  ccex.py  coincheck.py  cryptopia.py  gdax.py  gemini.py  hitbtc.py  itbit.py  kraken.py  okcoin.py  poloniex.py  quadriga.py  quoine.py  response.py  rest.py  rocktrading.py  vaultoro.py  yunbi.py
bitex/api/WSS/: __init__.py  base.py  bitfinex.py  bitstamp.py  exceptions.py  gdax.py  gemini.py  hitbtc.py  okcoin.py  poloniex.py
bitex/constants/: __init__.py  private.py  public.py
bitex/decorators/: __init__.py  bitstamp.py  generic.py  kraken.py
bitex/format/: __init__.py  bitstamp.py  kraken.py
bitex/formatters/: __init__.py  base.py  binance.py  bitfinex.py  bitstamp.py  bittrex.py  bter.py  ccex.py  coincheck.py  cryptopia.py  gdax.py  gemini.py  hitbtc.py  itbit.py  kraken.py  okcoin.py  poloniex.py  quadriga.py  quoine.py  rocktrading.py  vaultoro.py  yunbi.py
bitex/http/: __init__.py  bitfinex.py  bitstamp.py  bittrex.py  btce.py  client.py  coincheck.py  gdax.py  itbit.py  kraken.py  okcoin.py  overlay.py
bitex/interface/: __init__.py  base.py  binance.py  bitfinex.py  bitstamp.py  bittrex.py  bter.py  ccex.py  coincheck.py  cryptopia.py  extensions.py  gdax.py  gemini.py  hitbtc.py  interfaces.py  itbit.py  kraken.py  okcoin.py  poloniex.py  quadriga.py  quoine.py  rest.py  rocktrading.py  vaultoro.py  yunbi.py
bitex/interfaces/: __init__.py  bitfinex.py  bitstamp.py  bittrex.py  bter.py  ccex.py  coincheck.py  cryptopia.py  gdax.py  gemini.py  hitbtc.py  itbit.py  kraken.py  okcoin.py  poloniex.py  quadriga.py  quoine.py  rocktrading.py  vaultoro.py  yunbi.py
bitex/plugins/: __init__.py  base.py  specs.py
bitex/postoffice/: __init__.py  backend.py  server.py
bitfinex_client/: __init__.py  client.py
bitfinex_client/bitfinexex/: __init__.py
bitstamp_client/: __init__.py  client.py
bitstamp_client/bitstampex/: __init__.py  api.py
coincheck_client/: __init__.py  client.py
coincheck_client/coincheckex/: __init__.py  api.py
docs/: Makefile  conf.py  rtd-requirements.txt
docs/BitEx.egg-info/: PKG-INFO  requires.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.txt
docs/source/: conf.py  index.rst  references.rst
gdax_client/: test.py
gdax_client/gdaxex/: __init__.py
http/: bitstamp.py  client.py
interfaces/: bitfinex.py  bitstamp.py  bittrex.py  gdax.py  gemini.py  hitbtc.py  itbit.py  poloniex.py  vaultoro.py
kraken_client/: __init__.py  client.py
kraken_client/krakenex/: api.py
okcoin_client/: __init__.py
okcoin_client/okcoinex/: __init__.py
postoffice/: server.py
tests/: api.py  api_response_tests.py  api_tests.py  base_class_tests.py  client_tests.py  config.ini  formatters.py  helpers.py  interface_tests.py  krakenclients.py  pair_tests.py  payloads.py  standard_method_tests.py  test.key  test_adapter.py  test_api.py  test_auth.py  test_exceptions.py  test_request.py  test_response.py  test_session.py
tests/auth/: bitfinex.ini  bitstamp.ini  bittrex.ini  btce.ini  bter.ini  ccex.ini  coincheck.ini  cryptopia.ini  gdax.ini  hitbtc.ini  itbit.ini  kraken.ini  okcoin.ini  quadrigacx.ini  rocktrading.ini  vaultoro.ini
tests/configs/: config.ini  config_bitstamp.ini  config_no_api.ini  config_no_auth.ini
travis/: deploy.sh  execute_linters.sh  execute_tests.sh  force_deploy_on_nightly.sh  generate_nightly_setup.py  generate_rc_setup.py
