[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

######################
# FLIT CONFIGURATION #
######################

[tool.flit.metadata]
# General Meta data
dist-name = "bitex"
module = "bitex"
author = "Nils Diefenbach"
author-email = "nlsdfnbch.foss@kolabnow.com"
home-page = "https://github.com/crypto-toolbox/bitex"
description-file = "README.rst"

# Pypi Requirements
requires-python = ">3.6"
requires = [
    'requests',
    'pluggy',
]

# Classifiers, Licensing, keywords for pypi.
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
keywords = "bitex, crypto, api, interface, api-wrapper, bitcoin, exchange, trading"

[tools.flit.metadata.requires-extra]
# Extended dependencies required for development and testing. Flit installs these automatically.
test = ["pytest", "tox"]
dev = [
  "black",
  "isort",
  "tox",
]


[tool.flit.metadata.urls]
# All sorts of URLs to display on the pypi page.
GitHub = "https://github.com/crypto-toolbox/bitex/issues"
"Bug Tracker" = "https://github.com/crypto-toolbox/bitex/issues"

[tools.flit.scripts]
# CLI commands installed along with our package.


#######################
# TOOL CONFIGURATIONS #
#######################

[tool.isort]
line_length = 99
known_future_library = "future"
known_first_party = "bitex"
default_section = "THIRDPARTY"
combine_as_imports = 1
# black compatibility
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.black]
line-length = 99
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | test
  | docs
)/
'''
