[metadata]
description-file = README.rst
changelog = CHANGELOG.rst
contributor-guide = CONTRIBUTING.rst

[bumpversion]
current_version = 3.0.0
tag = True
commit = True
message = [SKIP CI] Bump version: {current_version} → {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
serialize = {major}.{minor}.{patch}